# rePaPer

./: .gitignore  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  postcss.config.js  tailwind.config.js
backend/repaper/: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml
backend/repaper/src/: main.py
backend/repaper/src/repaper/: __init__.py
backend/repaper/src/repaper/agents/: md_to_pdf.py  sectioner.py  summarizer.py
backend/repaper/src/repaper/api/: app.py
backend/repaper/src/repaper/models/: __init__.py  models.py  sections.py
backend/repaper/src/repaper/prompts/: __init__.py  sectioner.txt  summarizer.txt
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx
output_test/: summ_1_Definition_and_Classification_of_Urticaria.md  summ_2_Pathophysiology_and_Burden_of_Disease.md  summ_3_Diagnostic_Approach.md  summ_4_Management_and_Treatment.md  summary.md
src/: App.css  App.tsx  index.css
