[project]
name = "repaper"
version = "0.1.1"
description = "A tool to summarize and convert documents to PDF"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.49.0",
    "fastapi>=0.115.11",
    "logfire[fastapi]>=4.11.0",
    "markdown>=3.7",
    "markdown-pdf>=1.5",
    "mdit-py-plugins>=0.4.2",
    "pydantic-ai>=1.0.15",
    "pygments>=2.19.1",
    "pypdf2>=3.0.1",
    "python-markdown-math>=0.9",
    "python-multipart>=0.0.20",
    "sse-starlette>=2.2.1",
    "uvicorn>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
